# NoyauDev

./: 2TL2-G3.pem  README.md  pyvenv.cfg  setup.cfg
Scripts/: activate  activate.bat  activate.fish  activate.xsh
UniTest/: UniTest.py
public/all_loops/: loops.json
public/user_info/: user_info.json
public/views/: conversation.kv
src/config/: config.py
src/libs/chat/: connectdb.py  gen_message.py
src/models/: gen_message.py  message.py
src/views/: channels.py  conversation.py  loops.json  testReadWrite.py
