[metadata]
name = PyChat
version = 0.0.1
author = Louis Guiot, Bogdan Nechiffor, Quentin Roeland, Michaël Pourbaix
author_email = b.nechifor@students.ephec.be, mi.pourbaix@students.ephec.be
description = A database dependent chat app with smart page refresh
long_description = see file:README.md
classifiers =
    Programming Language :: Python :: 3.9
    License :: GNU GENERAL PUBLIC LICENSE
    Operating system :: OS Independent
[options]
package_dir = src/libs
python_requires = 3.8 or above
[option.packages.find]
where = src.libs